fix alignment bugs on hero

--- a/custom.css
+++ b/custom.css
@@ -55,8 +55,8 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    width: 70vw;
-    height: 100vh;
+    width: 50vw;
+    height: 80vh;
     z-index: 0;
 }
 
